--- a/index.html
+++ b/index.html
@@ -36,14 +36,22 @@
          <!-- Особливості -->
         <section>
             <ul>
-                <li><h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p></li>
-                <li><h3>ПУНКТУАЛЬНІСТЬ</h3>
-                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p></li>
-                <li><h3>ПЛАНУВАННЯ</h3>
-                <p>Так само консультація з широким активом значною мірою зумовлює.</p></li>
-                <li><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p></li>
+                <li>
+                    <h3>Увага до деталей</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li>
+                    <h3>Пункутальність</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li>
+                    <h3>Планування</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li>
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
             </ul>
             
         </section>
@@ -52,18 +60,40 @@
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-             <li><img src="./images/img1.jpg" alt="tablet_key" width="370" height="294"></li>
-                <li><img src="./images/img2.jpg" alt="laptop" width="370" height="294"></li>
-             <li><img src="./images/img3.jpg" alt="tablet" width="370" height="294"></li>
+                <li>
+                 <img src="./images/img1.jpg" alt="tablet_key" width="370" height="294">
+                </li>
+                <li>
+                    <img src="./images/img2.jpg" alt="laptop" width="370" height="294">
+                </li>
+                <li>
+                    <img src="./images/img3.jpg" alt="tablet" width="370" height="294">
+                </li>
             </ul>
         </section>
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><img src="./images/person1.jpg" alt="person1" width="270" height="260"> <p>Ігор Дем'яненко</p> <p>Product Designer</p></li>
-                <li><img src="./images/person2.jpg" alt="person2"  width="270" height="260"> <p>Ольга Рєпіна</p> <p>Frontend Developer</p></li>
-                <li><img src="./images/person3.jpg" alt="person3"  width="270" height="260"> <p>Микола Тарасов</p> <p>Marketing</p></li>
-                <li><img src="./images/person4.jpg" alt="person4"  width="270" height="260"> <p>Михайло Єрмаков</p> <p>UI Designer</p></li>
+                <li>
+                    <img src="./images/person1.jpg" alt="особа2" width="270" height="260"> 
+                    <p>Ігор Дем'яненко</p> 
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/person2.jpg" alt="особа2"  width="270" height="260"> 
+                    <p>Ольга Рєпіна</p> 
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/person3.jpg" alt="особа3"  width="270" height="260"> 
+                    <p>Микола Тарасов</p> 
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/person4.jpg" alt="особа4"  width="270" height="260"> 
+                    <p>Михайло Єрмаков</p> 
+                    <p>UI Designer</p>
+                </li>
             </ul>
         </section>
             
@@ -72,9 +102,11 @@
         <a href="https://webstudio.com.ua">WebStudio</a>
 
         <address>
-            м. Київ, пр-т Лесі Українки, 26 <br>        
+            <p>
+                м. Київ, пр-т Лесі Українки, 26
+            </p>        
             <!-- Tel -->
-            <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> <br>
+            <a href="tel:+380961111111">+38 096 111 11 11</a> <br>
             <!-- E-Mail -->
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </address>
